[package]
name = "kiberone-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.97"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }

log = "0.4"
pretty_env_logger = "0.5"
anyhow = "1.0.71"
